# silent_admin

./: .env.template  .gitignore  Cargo.toml  README.md  deny.toml
api/: Cargo.toml
api/src/: lib.rs  route.rs
api/src/monitor/: mod.rs  server_info.rs
api/src/system/: common.rs  mod.rs  sys_api_db.rs  sys_dept.rs  sys_dict_data.rs  sys_dict_type.rs  sys_job.rs  sys_job_log.rs  sys_login_log.rs  sys_menu.rs  sys_oper_log.rs  sys_post.rs  sys_role.rs  sys_update_log.rs  sys_user.rs  sys_user_online.rs
api/src/test/: mod.rs  test_data_scope.rs
common/: Cargo.toml
common/src/: database.rs  error.rs  global_error_handler.rs  jwt.rs  lib.rs  log.rs  pagination.rs  response.rs  rt.rs  service.rs  snowflake.rs
common/src/middlewares/: authorization.rs  ctx.rs  mod.rs  operate_log.rs  permission.rs  result_wrapper.rs
common/src/query/: delete_param.rs  mod.rs
common/src/utils/: get_active_model_from_value.rs  get_id_from_value.rs  mod.rs  rand_utils.rs  tree.rs
config/: config.toml
configs/: Cargo.toml
configs/src/: cfgs.rs
data/log/: app_log.2024-11-20
db/: Cargo.toml
db/src/common/: res.rs
db/src/system/entities/: sys_api_db.rs  sys_dept.rs  sys_dict_data.rs  sys_dict_type.rs  sys_job.rs  sys_job_log.rs  sys_login_log.rs  sys_menu.rs  sys_oper_log.rs  sys_post.rs  sys_role.rs  sys_role_api.rs  sys_role_dept.rs  sys_update_log.rs  sys_user.rs  sys_user_dept.rs  sys_user_online.rs  sys_user_post.rs  sys_user_role.rs
db/src/system/models/: sys_user.rs
dto/: Cargo.toml
dto/src/: lib.rs
dto/src/common/: captcha.rs  client.rs  ctx.rs  res.rs
dto/src/system/: server_info.rs  sys_api_db.rs  sys_dept.rs  sys_dict_data.rs  sys_dict_type.rs  sys_job.rs  sys_job_log.rs  sys_login_log.rs  sys_menu.rs  sys_oper_log.rs  sys_post.rs  sys_role.rs  sys_role_api.rs  sys_update_log.rs  sys_user.rs  sys_user_online.rs
entity/: Cargo.toml
entity/src/: lib.rs  prelude.rs  sys_config.rs  sys_dept.rs  sys_dict_data.rs  sys_dict_type.rs  sys_job.rs  sys_job_log.rs  sys_login_info_record.rs  sys_menu.rs  sys_notice.rs  sys_operate_log.rs  sys_post.rs  sys_role.rs  sys_role_dept.rs  sys_role_menu.rs  sys_user.rs  sys_user_dept.rs  sys_user_online.rs  sys_user_post.rs  sys_user_role.rs
middleware-fn/: Cargo.toml
middleware-fn/src/: auth.rs  cache.rs  cache_skytable.rs  ctx.rs  lib.rs  oper_log.rs  result_wrapper.rs
migration/: Cargo.toml  README.md
migration/src/: common.rs  lib.rs  m20220101_000001_create_table.rs
migration/src/base_system/: mod.rs  sys_config.rs  sys_dept.rs  sys_dict_data.rs  sys_dict_type.rs  sys_job.rs  sys_job_log.rs  sys_login_info_record.rs  sys_menu.rs  sys_notice.rs  sys_operate_log.rs  sys_post.rs  sys_role.rs  sys_role_dept.rs  sys_role_menu.rs  sys_user.rs  sys_user_dept.rs  sys_user_online.rs  sys_user_post.rs  sys_user_role.rs
service/: Cargo.toml
service/src/service_utils/: jwt.rs  web_utils.rs
service/src/system/: common.rs  mod.rs  server_info.rs  sys_dict_type.rs  sys_user.rs
service/src/tasks/: task_runner.rs
service/src/test/: test_data_scope.rs
services/: Cargo.toml
services/src/: lib.rs
services/src/service_utils/: api_utils.rs  jwt.rs  mod.rs  web_utils.rs
services/src/system/: common.rs  mod.rs  server_info.rs  sys_api_db.rs  sys_dept.rs  sys_dict_data.rs  sys_dict_type.rs  sys_job.rs  sys_job_log.rs  sys_login_log.rs  sys_menu.rs  sys_oper_log.rs  sys_post.rs  sys_role.rs  sys_role_api.rs  sys_update_log.rs  sys_user.rs  sys_user_dept.rs  sys_user_online.rs  sys_user_role.rs
services/src/tasks/: mod.rs  task_builder.rs  task_runner.rs
services/src/tasks/task/: system.rs
services/src/test/: test_data_scope.rs
src/: main.rs
utils/: Cargo.toml
