[workspace]
members = [
    ".",
    "common",
    "configs",
    "api",
    "migration",
    "entity",
    "dto",
    "services", ]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Hubert Shelley <hubertshelley@163.com>"]
homepage = ""
license = ""
readme = "./README.md"
repository = ""
publish = false
version = "0.1.0"

[workspace.dependencies]
configs = { path = "./configs" }
dto = { path = "./dto" }
entity = { path = "./entity" }

silent = { git = "https://github.com/hubertshelley/silent.git", branch = "2.0.0" }

once_cell = "1.8.0"
toml = "0.5.8"
serde = "1.0.126"
futures = "0.3.17"
chrono = "0.4.19"
tokio-stream = "0.1.7"
sea-orm = "1"
delay_timer = "0"
# 验证码
captcha_rust = "0"
#  随机数
md5 = "0"
rand = "0"
# 系统信息
sysinfo = "0"
user-agent-parser = "0.3"
reqwest = "0"
anyhow = "1"
regex = "1"
serde_json = "1"
tokio = "1"
tracing = "0"
jsonwebtoken = "8"
sonyflake = "0"
thiserror = "1"
time = "0"
tracing-appender = "0"
tracing-subscriber = "0"
async-trait = "0"
dotenv = "0"
async-std = "1"
sea-orm-migration = "1"

[package]
name = "silent-admin"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true
publish = false

[dependencies]
# list of crates in this workspace
api = { path = "./api" }
migration = { path = "./migration" }
common = { path = "./common" }

dotenv = { workspace = true, features = ["clap"] }
tokio = { workspace = true, features = ["full"] }
