[package]
name = "api"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
common = { path = "../common" }
#entity = { path = "../entity" }
services = { path = "../services" }

silent = { workspace = true }
