[package]
name = "api"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
configs = { path = "../configs" }
common = { path = "../common" }
entity = { path = "../entity" }
services = { path = "../services" }
dto = { path = "../dto" }

silent = { workspace = true, features = ["sse", "multipart"] }

futures = { workspace = true }
tokio-stream = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
