[package]
name = "common"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
once_cell = "1.19.0"
sea-orm = "0.12.15"
serde = { version = "1.0.204", features = ["derive"] }
silent = { workspace = true }
thiserror = "1.0.61"


tokio = "1.38.0"
tracing = "0.1.40"
time = "0.3.36"
tracing-subscriber = { version = "0.3.18", features = ["chrono"] }
tracing-appender = "0.2.3"
serde_json = "1.0.120"
chrono = "0.4.38"
sonyflake = "0.2.0"
jsonwebtoken = "9.3.0"
regex = "1.10.5"
