[package]
name = "common"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
configs = { workspace = true }
dto = { workspace = true }
entity = { workspace = true }

anyhow = { workspace = true, features = ["backtrace"] }
once_cell = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true, features = ["derive"] }
silent = { workspace = true }
thiserror = { workspace = true }


tokio = { workspace = true }
tracing = { workspace = true }
time = { workspace = true }
tracing-subscriber = { workspace = true, features = ["chrono"] }
tracing-appender = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
sonyflake = { workspace = true }
jsonwebtoken = { workspace = true }
regex = { workspace = true }
md5 = { workspace = true }
rand = { workspace = true, features = ["small_rng"] }
async-trait = { workspace = true }
