[package]
name = "dto"
edition.workspace = true
publish.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#
configs = { path = "../configs" }
entity = { path = "../entity" }
#
silent = { workspace = true }
#
chrono = { workspace = true, features = ["serde"] }
# regex = {workspace = true}
serde = { workspace = true, features = ["derive"] }
sea-orm = { workspace = true }
