[package]
name = "entity"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
sea-orm = { workspace = true }
serde = { workspace = true, features = ["derive"] }
