[package]
name = "services"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
chrono = "0.4.38"
common = { path = "../common" }
#entity = { path = "../entity" }
regex = "1.10.5"
sea-orm = "0.12.15"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
once_cell = "1.19.0"
tokio = { version = "1.38.0", features = ["sync"] }
futures = "0.3.30"
tracing = "0.1.40"
