[package]
name = "services"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
common = { path = "../common" }
dto = { path = "../dto" }
entity = { path = "../entity" }
configs = { path = "../configs" }

silent = { workspace = true, features = ["security"] }

chrono = { workspace = true }
regex = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
once_cell = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
futures = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
delay_timer = { workspace = true }
captcha_rust = { workspace = true }
# 系统信息
sysinfo = { workspace = true }
user-agent-parser = { workspace = true }
reqwest = { workspace = true }
